corrected some form visibility issues

--- a/app/assets/stylesheets/custom.css.scss.css
+++ b/app/assets/stylesheets/custom.css.scss.css
@@ -163,7 +163,7 @@ label {
 	display: none;
 	visibility: hidden;
 }
-.pet-block-first {
+.pet-block-visible {
 	display: block;
 	visibility: visible;
 }
